@@ -13,10 +13,7 @@
 
 package org.eclipse.jetty.start.usecases;
 
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -24,6 +21,7 @@ import java.util.Set;
 import org.eclipse.jetty.toolchain.test.FS;
 import org.junit.jupiter.api.Test;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
@@ -40,69 +38,64 @@ public class AlternatesTest extends AbstractUseCase
         FS.ensureDirExists(baseDir.resolve("modules"));
         FS.touch(baseDir.resolve("etc/d.xml"));
         FS.touch(baseDir.resolve("etc/ndb.xml"));
-        Files.write(baseDir.resolve("modules/alternate.mod"),
-            Arrays.asList(
-                "[provides]",
-                "default",
-                "[ini]",
-                "default.option=alternate"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/default.mod"),
-            Arrays.asList(
-                "[xml]",
-                "etc/d.xml",
-                "[ini]",
-                "default.option=default"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/noDftOptionA.mod"),
-            Arrays.asList(
-                "[provides]",
-                "noDft",
-                "[optional]",
-                "default",
-                "[ini]",
-                "noDft.option=A"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/noDftOptionB.mod"),
-            Arrays.asList(
-                "[provides]",
-                "noDft",
-                "[depend]",
-                "default",
-                "[xml]",
-                "etc/ndb.xml",
-                "[ini]",
-                "noDft.option=B"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("start.ini"),
-            Collections.singletonList(
-                "--modules=main"
-            ),
-            StandardCharsets.UTF_8);
+        Files.writeString(baseDir.resolve("modules/alternate.mod"),
+            """
+            [provides]
+            default
+            [ini]
+            default.option=alternate
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/default.mod"),
+            """
+            [xml]
+            etc/d.xml
+            [ini]
+            default.option=default
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/noDftOptionA.mod"),
+            """
+            [provides]
+            noDft
+            [optional]
+            default
+            [ini]
+            noDft.option=A
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/noDftOptionB.mod"),
+            """
+            [provides]
+            noDft
+            [depend]
+            default
+            [xml]
+            etc/ndb.xml
+            [ini]
+            noDft.option=B
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("start.ini"),
+            """
+            --modules=main
+            """, UTF_8);
 
         // === Execute Main
-        List<String> runArgs = Collections.singletonList(
+        List<String> runArgs = List.of(
             "--modules=noDftOptionA"
         );
         ExecResults results = exec(runArgs, false);
 
         // === Validate Resulting XMLs
-        List<String> expectedXmls = Arrays.asList(
-            "${jetty.home}/etc/base.xml",
-            "${jetty.home}/etc/main.xml"
+        List<String> expectedXmls = List.of(
+            FS.separators("${jetty.home}/etc/base.xml"),
+            FS.separators("${jetty.home}/etc/main.xml")
         );
         List<String> actualXmls = results.getXmls();
         assertThat("XML Resolution Order", actualXmls, contains(expectedXmls.toArray()));
 
         // === Validate Resulting LIBs
-        List<String> expectedLibs = Arrays.asList(
-            "${jetty.home}/lib/base.jar",
-            "${jetty.home}/lib/main.jar",
-            "${jetty.home}/lib/other.jar"
+        List<String> expectedLibs = List.of(
+            FS.separators("${jetty.home}/lib/base.jar"),
+            FS.separators("${jetty.home}/lib/main.jar"),
+            FS.separators("${jetty.home}/lib/other.jar")
         );
         List<String> actualLibs = results.getLibs();
         assertThat("Libs", actualLibs, containsInAnyOrder(expectedLibs.toArray()));
@@ -124,71 +117,66 @@ public class AlternatesTest extends AbstractUseCase
         FS.ensureDirExists(baseDir.resolve("modules"));
         FS.touch(baseDir.resolve("etc/d.xml"));
         FS.touch(baseDir.resolve("etc/ndb.xml"));
-        Files.write(baseDir.resolve("modules/alternate.mod"),
-            Arrays.asList(
-                "[provides]",
-                "default",
-                "[ini]",
-                "default.option=alternate"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/default.mod"),
-            Arrays.asList(
-                "[xml]",
-                "etc/d.xml",
-                "[ini]",
-                "default.option=default"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/noDftOptionA.mod"),
-            Arrays.asList(
-                "[provides]",
-                "noDft",
-                "[optional]",
-                "default",
-                "[ini]",
-                "noDft.option=A"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/noDftOptionB.mod"),
-            Arrays.asList(
-                "[provides]",
-                "noDft",
-                "[depend]",
-                "default",
-                "[xml]",
-                "etc/ndb.xml",
-                "[ini]",
-                "noDft.option=B"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("start.ini"),
-            Collections.singletonList(
-                "--modules=main"
-            ),
-            StandardCharsets.UTF_8);
+        Files.writeString(baseDir.resolve("modules/alternate.mod"),
+            """
+            [provides]
+            default
+            [ini]
+            default.option=alternate
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/default.mod"),
+            """
+            [xml]
+            etc/d.xml
+            [ini]
+            default.option=default
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/noDftOptionA.mod"),
+            """
+            [provides]
+            noDft
+            [optional]
+            default
+            [ini]
+            noDft.option=A
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/noDftOptionB.mod"),
+            """
+            [provides]
+            noDft
+            [depend]
+            default
+            [xml]
+            etc/ndb.xml
+            [ini]
+            noDft.option=B
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("start.ini"),
+            """
+            --modules=main
+            """, UTF_8);
 
         // === Execute Main
-        List<String> runArgs = Collections.singletonList(
+        List<String> runArgs = List.of(
             "--modules=noDftOptionB"
         );
         ExecResults results = exec(runArgs, false);
 
         // === Validate Resulting XMLs
-        List<String> expectedXmls = Arrays.asList(
-            "${jetty.home}/etc/base.xml",
-            "${jetty.home}/etc/main.xml",
-            "${jetty.base}/etc/d.xml",
-            "${jetty.base}/etc/ndb.xml"
+        List<String> expectedXmls = List.of(
+            FS.separators("${jetty.home}/etc/base.xml"),
+            FS.separators("${jetty.home}/etc/main.xml"),
+            FS.separators("${jetty.base}/etc/d.xml"),
+            FS.separators("${jetty.base}/etc/ndb.xml")
         );
         List<String> actualXmls = results.getXmls();
         assertThat("XML Resolution Order", actualXmls, contains(expectedXmls.toArray()));
 
         // === Validate Resulting LIBs
-        List<String> expectedLibs = Arrays.asList(
-            "${jetty.home}/lib/base.jar",
-            "${jetty.home}/lib/main.jar",
-            "${jetty.home}/lib/other.jar"
+        List<String> expectedLibs = List.of(
+            FS.separators("${jetty.home}/lib/base.jar"),
+            FS.separators("${jetty.home}/lib/main.jar"),
+            FS.separators("${jetty.home}/lib/other.jar")
         );
         List<String> actualLibs = results.getLibs();
         assertThat("Libs", actualLibs, containsInAnyOrder(expectedLibs.toArray()));
@@ -211,70 +199,65 @@ public class AlternatesTest extends AbstractUseCase
         FS.ensureDirExists(baseDir.resolve("modules"));
         FS.touch(baseDir.resolve("etc/d.xml"));
         FS.touch(baseDir.resolve("etc/ndb.xml"));
-        Files.write(baseDir.resolve("modules/alternate.mod"),
-            Arrays.asList(
-                "[provides]",
-                "default",
-                "[ini]",
-                "default.option=alternate"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/default.mod"),
-            Arrays.asList(
-                "[xml]",
-                "etc/d.xml",
-                "[ini]",
-                "default.option=default"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/noDftOptionA.mod"),
-            Arrays.asList(
-                "[provides]",
-                "noDft",
-                "[optional]",
-                "default",
-                "[ini]",
-                "noDft.option=A"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/noDftOptionB.mod"),
-            Arrays.asList(
-                "[provides]",
-                "noDft",
-                "[depend]",
-                "default",
-                "[xml]",
-                "etc/ndb.xml",
-                "[ini]",
-                "noDft.option=B"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("start.ini"),
-            Collections.singletonList(
-                "--modules=main"
-            ),
-            StandardCharsets.UTF_8);
+        Files.writeString(baseDir.resolve("modules/alternate.mod"),
+            """
+            [provides]
+            default
+            [ini]
+            default.option=alternate
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/default.mod"),
+            """
+            [xml]
+            etc/d.xml
+            [ini]
+            default.option=default
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/noDftOptionA.mod"),
+            """
+            [provides]
+            noDft
+            [optional]
+            default
+            [ini]
+            noDft.option=A
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/noDftOptionB.mod"),
+            """
+            [provides]
+            noDft
+            [depend]
+            default
+            [xml]
+            etc/ndb.xml
+            [ini]
+            noDft.option=B
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("start.ini"),
+            """
+            --modules=main
+            """, UTF_8);
 
         // === Execute Main
-        List<String> runArgs = Collections.singletonList(
+        List<String> runArgs = List.of(
             "--modules=alternate,noDftOptionB"
         );
         ExecResults results = exec(runArgs, false);
 
         // === Validate Resulting XMLs
-        List<String> expectedXmls = Arrays.asList(
-            "${jetty.home}/etc/base.xml",
-            "${jetty.home}/etc/main.xml",
-            "${jetty.base}/etc/ndb.xml"
+        List<String> expectedXmls = List.of(
+            FS.separators("${jetty.home}/etc/base.xml"),
+            FS.separators("${jetty.home}/etc/main.xml"),
+            FS.separators("${jetty.base}/etc/ndb.xml")
         );
         List<String> actualXmls = results.getXmls();
         assertThat("XML Resolution Order", actualXmls, contains(expectedXmls.toArray()));
 
         // === Validate Resulting LIBs
-        List<String> expectedLibs = Arrays.asList(
-            "${jetty.home}/lib/base.jar",
-            "${jetty.home}/lib/main.jar",
-            "${jetty.home}/lib/other.jar"
+        List<String> expectedLibs = List.of(
+            FS.separators("${jetty.home}/lib/base.jar"),
+            FS.separators("${jetty.home}/lib/main.jar"),
+            FS.separators("${jetty.home}/lib/other.jar")
         );
         List<String> actualLibs = results.getLibs();
         assertThat("Libs", actualLibs, containsInAnyOrder(expectedLibs.toArray()));
@@ -297,52 +280,47 @@ public class AlternatesTest extends AbstractUseCase
         FS.ensureDirExists(baseDir.resolve("modules"));
         FS.touch(baseDir.resolve("etc/d.xml"));
         FS.touch(baseDir.resolve("etc/ndb.xml"));
-        Files.write(baseDir.resolve("modules/alternate.mod"),
-            Arrays.asList(
-                "[provides]",
-                "default",
-                "[ini]",
-                "default.option=alternate"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/default.mod"),
-            Arrays.asList(
-                "[xml]",
-                "etc/d.xml",
-                "[ini]",
-                "default.option=default"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/noDftOptionA.mod"),
-            Arrays.asList(
-                "[provides]",
-                "noDft",
-                "[optional]",
-                "default",
-                "[ini]",
-                "noDft.option=A"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/noDftOptionB.mod"),
-            Arrays.asList(
-                "[provides]",
-                "noDft",
-                "[depend]",
-                "default",
-                "[xml]",
-                "etc/ndb.xml",
-                "[ini]",
-                "noDft.option=B"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("start.ini"),
-            Collections.singletonList(
-                "--modules=main"
-            ),
-            StandardCharsets.UTF_8);
+        Files.writeString(baseDir.resolve("modules/alternate.mod"),
+            """
+            [provides]
+            default
+            [ini]
+            default.option=alternate
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/default.mod"),
+            """
+            [xml]
+            etc/d.xml
+            [ini]
+            default.option=default
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/noDftOptionA.mod"),
+            """
+            [provides]
+            noDft
+            [optional]
+            default
+            [ini]
+            noDft.option=A
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/noDftOptionB.mod"),
+            """
+            [provides]
+            noDft
+            [depend]
+            default
+            [xml]
+            etc/ndb.xml
+            [ini]
+            noDft.option=B
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("start.ini"),
+            """
+            --modules=main
+            """, UTF_8);
 
         // === Execute Main
-        List<String> runArgs = Collections.singletonList(
+        List<String> runArgs = List.of(
             "--modules=alternate,default"
         );
         ExecResults results = exec(runArgs, false);
@@ -361,77 +339,72 @@ public class AlternatesTest extends AbstractUseCase
         FS.ensureDirExists(baseDir.resolve("modules"));
         FS.touch(baseDir.resolve("etc/d.xml"));
         FS.touch(baseDir.resolve("etc/ndb.xml"));
-        Files.write(baseDir.resolve("modules/alternate.mod"),
-            Arrays.asList(
-                "[provides]",
-                "default",
-                "[ini]",
-                "default.option=alternate"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/default.mod"),
-            Arrays.asList(
-                "[xml]",
-                "etc/d.xml",
-                "[ini]",
-                "default.option=default"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/noDftOptionA.mod"),
-            Arrays.asList(
-                "[provides]",
-                "noDft",
-                "[optional]",
-                "default",
-                "[ini]",
-                "noDft.option=A"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("modules/noDftOptionB.mod"),
-            Arrays.asList(
-                "[provides]",
-                "noDft",
-                "[depend]",
-                "default",
-                "[xml]",
-                "etc/ndb.xml",
-                "[ini]",
-                "noDft.option=B"
-            ),
-            StandardCharsets.UTF_8);
-        Files.write(baseDir.resolve("start.ini"),
-            Collections.singletonList(
-                "--modules=main"
-            ),
-            StandardCharsets.UTF_8);
+        Files.writeString(baseDir.resolve("modules/alternate.mod"),
+            """
+            [provides]
+            default
+            [ini]
+            default.option=alternate
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/default.mod"),
+            """
+            [xml]
+            etc/d.xml
+            [ini]
+            default.option=default
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/noDftOptionA.mod"),
+            """
+            [provides]
+            noDft
+            [optional]
+            default
+            [ini]
+            noDft.option=A
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("modules/noDftOptionB.mod"),
+            """
+            [provides]
+            noDft
+            [depend]
+            default
+            [xml]
+            etc/ndb.xml
+            [ini]
+            noDft.option=B
+            """, UTF_8);
+        Files.writeString(baseDir.resolve("start.ini"),
+        """
+            --modules=main
+            """, UTF_8);
 
         // === Prepare Jetty Base using Main
-        List<String> prepareArgs = Arrays.asList(
+        List<String> prepareArgs = List.of(
             "--testing-mode",
             "--add-modules=noDftOptionB"
         );
         exec(prepareArgs, true);
 
         // === Execute Main
-        List<String> runArgs = Collections.singletonList(
+        List<String> runArgs = List.of(
             "--modules=alternate"
         );
         ExecResults results = exec(runArgs, false);
 
         // === Validate Resulting XMLs
-        List<String> expectedXmls = Arrays.asList(
-            "${jetty.home}/etc/base.xml",
-            "${jetty.home}/etc/main.xml",
-            "${jetty.base}/etc/ndb.xml"
+        List<String> expectedXmls = List.of(
+            FS.separators("${jetty.home}/etc/base.xml"),
+            FS.separators("${jetty.home}/etc/main.xml"),
+            FS.separators("${jetty.base}/etc/ndb.xml")
         );
         List<String> actualXmls = results.getXmls();
         assertThat("XML Resolution Order", actualXmls, contains(expectedXmls.toArray()));
 
         // === Validate Resulting LIBs
-        List<String> expectedLibs = Arrays.asList(
-            "${jetty.home}/lib/base.jar",
-            "${jetty.home}/lib/main.jar",
-            "${jetty.home}/lib/other.jar"
+        List<String> expectedLibs = List.of(
+            FS.separators("${jetty.home}/lib/base.jar"),
+            FS.separators("${jetty.home}/lib/main.jar"),
+            FS.separators("${jetty.home}/lib/other.jar")
         );
         List<String> actualLibs = results.getLibs();
         assertThat("Libs", actualLibs, containsInAnyOrder(expectedLibs.toArray()));
